[gd_scene load_steps=47 format=3 uid="uid://d3kxjtfxpb3"]

[ext_resource type="Script" uid="uid://bamnaw52w1k70" path="res://Scripts/Classes/Character Base.gd" id="1_xk7ei"]
[ext_resource type="Script" uid="uid://cld53y2v7ce22" path="res://Scripts/Classes/stats/Action Stats.gd" id="2_gl3i0"]
[ext_resource type="Script" uid="uid://bnegr4jaj148f" path="res://Scripts/Classes/stats/Diet Stats.gd" id="3_2fvgg"]
[ext_resource type="Script" uid="uid://cggoonwmx4efq" path="res://Scripts/Classes/stats/Growth Stats.gd" id="4_2ctmu"]
[ext_resource type="Script" uid="uid://17vk0qsshlcu" path="res://Scripts/Classes/stats/Health Stats.gd" id="5_jc1tt"]
[ext_resource type="Script" uid="uid://bdsmn6e6mhnl7" path="res://Scripts/Classes/stats/Mating Stats.gd" id="6_ek07b"]
[ext_resource type="Script" uid="uid://btt00psp2ndbv" path="res://Scripts/Classes/stats/Movement Stats.gd" id="7_inycb"]
[ext_resource type="Script" uid="uid://d2ymegg2fohlx" path="res://Scripts/Classes/stats/Stat Sheet.gd" id="8_tiam7"]
[ext_resource type="Script" uid="uid://bsmveele1pgxm" path="res://Scripts/Components/visual_component.gd" id="9_0f81r"]
[ext_resource type="Texture2D" uid="uid://4hns6hp7ejur" path="res://Assets/Sprites/Slimes/Slime.png" id="10_fmtye"]
[ext_resource type="PackedScene" uid="uid://br0s0bfdp2be" path="res://Scenes/Component/pathfinding_component.tscn" id="11_ukxu3"]
[ext_resource type="PackedScene" uid="uid://dcygtewm0rodh" path="res://Scenes/Component/product_rays.tscn" id="12_eeoh1"]
[ext_resource type="PackedScene" uid="uid://cgvkdw6rtfih5" path="res://Scenes/Component/health_component.tscn" id="13_ohjqw"]
[ext_resource type="PackedScene" uid="uid://knq274mxhmj" path="res://Scenes/Component/hunger_component.tscn" id="14_wo868"]
[ext_resource type="PackedScene" uid="uid://bqcpn11fuxc8q" path="res://Scenes/Component/thrist_component.tscn" id="15_p4vur"]
[ext_resource type="PackedScene" uid="uid://d8vlhvfa6yji" path="res://Scenes/Component/growth_component.tscn" id="16_rlj1u"]
[ext_resource type="PackedScene" uid="uid://dpa3n8dxp3xyn" path="res://Scenes/Component/mating_component.tscn" id="17_153qs"]
[ext_resource type="PackedScene" uid="uid://b44velwyjad5s" path="res://Scenes/Component/action_componet.tscn" id="18_3gtd0"]
[ext_resource type="Script" uid="uid://be1bekq0ekp1y" path="res://Scripts/Components/slime_actions.gd" id="19_k677e"]
[ext_resource type="PackedScene" uid="uid://ch55c0koeb6f0" path="res://Scenes/Component/vision_component.tscn" id="20_uegb7"]
[ext_resource type="PackedScene" uid="uid://bsad3dcuvs8gi" path="res://Scenes/Component/animation_handler.tscn" id="21_bjq7c"]
[ext_resource type="Script" uid="uid://bvhvv7e1nlkc3" path="res://Scripts/Components/info_component.gd" id="22_20dna"]
[ext_resource type="Script" uid="uid://fow641oc4s1c" path="res://Scripts/Components/state_machine.gd" id="23_io67o"]
[ext_resource type="Script" uid="uid://hki0ialygjch" path="res://Scripts/Components/States/idle.gd" id="24_cgf7x"]
[ext_resource type="Script" uid="uid://teqcs1hbgb62" path="res://Scripts/Components/States/wander.gd" id="25_vqckb"]
[ext_resource type="Script" uid="uid://dih136ovs2sx3" path="res://Scripts/Components/States/goto.gd" id="26_rw7lf"]
[ext_resource type="Script" uid="uid://bxdx86c1c8kh0" path="res://Scripts/Components/States/state.gd" id="27_hxgh2"]
[ext_resource type="Script" uid="uid://m1fpjvuaupey" path="res://Scripts/Components/States/drinking.gd" id="28_s7vl5"]
[ext_resource type="Script" uid="uid://db72v3kab4thr" path="res://Scripts/Components/States/explore.gd" id="29_g8a5i"]
[ext_resource type="Script" uid="uid://bilp07snpp3je" path="res://Scripts/Components/States/mate.gd" id="30_cep4h"]
[ext_resource type="Texture2D" uid="uid://dk5krvfo7sd56" path="res://Assets/Sprites/ArrowTest.png" id="31_7u62a"]

[sub_resource type="Resource" id="Resource_xk7ei"]
script = ExtResource("2_gl3i0")
vision_range = 1500.0
action_range = 200.0
metadata/_custom_type_script = "uid://cld53y2v7ce22"

[sub_resource type="Resource" id="Resource_gl3i0"]
script = ExtResource("3_2fvgg")
diet = Array[String](["Fruit"])
hunger = 100
hunger_decay = 0.01
hunger_threshold = 0.5
thrist = 100
thrist_decay = 0.01
thrist_threshold = 0.5
metadata/_custom_type_script = "uid://bnegr4jaj148f"

[sub_resource type="Resource" id="Resource_2fvgg"]
script = ExtResource("4_2ctmu")
inital_growth = 1.0
growth_speed = 0.0001
metadata/_custom_type_script = "uid://cggoonwmx4efq"

[sub_resource type="Resource" id="Resource_2ctmu"]
script = ExtResource("5_jc1tt")
health = 5
metadata/_custom_type_script = "uid://17vk0qsshlcu"

[sub_resource type="Resource" id="Resource_jc1tt"]
script = ExtResource("6_ek07b")
reproduction_cooldown = 0.0
gender = 1
attractiveness = 100.0
sex_drive = 100.0
offspring_count = 1
gestation_period = 120.0
metadata/_custom_type_script = "uid://bdsmn6e6mhnl7"

[sub_resource type="Resource" id="Resource_ek07b"]
script = ExtResource("7_inycb")
speed = 200
friction = 0.1
acceleration = 0.1
metadata/_custom_type_script = "uid://btt00psp2ndbv"

[sub_resource type="Resource" id="Resource_inycb"]
script = ExtResource("8_tiam7")
health_stats = SubResource("Resource_2ctmu")
action_stats = SubResource("Resource_xk7ei")
mating_stats = SubResource("Resource_jc1tt")
growth_stats = SubResource("Resource_2fvgg")
diet_stats = SubResource("Resource_gl3i0")
movement_stats = SubResource("Resource_ek07b")
character_color = Color(1, 1, 1, 1)
metadata/_custom_type_script = "uid://d2ymegg2fohlx"

[sub_resource type="Animation" id="Animation_gedrr"]
resource_name = "Idle"
loop_mode = 2

[sub_resource type="Animation" id="Animation_v65uf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VisualComponent:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_ihfhn"]
resource_name = "Wander"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VisualComponent/BaseBody:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1)]
}

[sub_resource type="Animation" id="Animation_gxxdi"]
resource_name = "Popup"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VisualComponent:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.225, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ihfhn"]
_data = {
&"Idle": SubResource("Animation_gedrr"),
&"Popup": SubResource("Animation_gxxdi"),
&"RESET": SubResource("Animation_v65uf"),
&"Wander": SubResource("Animation_ihfhn")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_meode"]
radius = 5.0
height = 50.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sc2rg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_meode"]
radius = 5.0

[node name="FemaleSlime" type="CharacterBody2D" groups=["Slime"]]
y_sort_enabled = true
collision_mask = 2
motion_mode = 1
platform_on_leave = 2
platform_floor_layers = 4294967040
script = ExtResource("1_xk7ei")
stat_sheet = SubResource("Resource_inycb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ihfhn")
}
autoplay = "Popup"

[node name="CollisionComponent" type="CollisionShape2D" parent="."]
position = Vector2(0, 10)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_meode")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="VisualComponent" type="Node2D" parent="."]
scale = Vector2(1e-05, 1e-05)
script = ExtResource("9_0f81r")

[node name="SpriteComponent" type="Sprite2D" parent="VisualComponent"]
texture_filter = 1
material = SubResource("ShaderMaterial_sc2rg")
texture = ExtResource("10_fmtye")
region_enabled = true
region_rect = Rect2(120, 15, 70, 60)

[node name="Attena_Lashes" type="Node2D" parent="VisualComponent"]

[node name="FemaleLashes" type="Sprite2D" parent="VisualComponent/Attena_Lashes"]
texture_filter = 1
material = SubResource("ShaderMaterial_sc2rg")
position = Vector2(0, -22.5)
texture = ExtResource("10_fmtye")
region_enabled = true
region_rect = Rect2(195, 25, 60, 15)

[node name="PathfindingComponent" parent="." instance=ExtResource("11_ukxu3")]

[node name="ProductRays" parent="PathfindingComponent" instance=ExtResource("12_eeoh1")]
unique_name_in_owner = true

[node name="HealthComponent" parent="." instance=ExtResource("13_ohjqw")]

[node name="HungerComponent" parent="." node_paths=PackedStringArray("action_component", "health_component", "hungry_state") instance=ExtResource("14_wo868")]
action_component = NodePath("../ActionComponet")
health_component = NodePath("../HealthComponent")
hungry_state = NodePath("../State Machine/Goto")

[node name="ThristComponent" parent="." node_paths=PackedStringArray("action_component") instance=ExtResource("15_p4vur")]
action_component = NodePath("../ActionComponet")
enabled = true

[node name="GrowthComponent" parent="." instance=ExtResource("16_rlj1u")]

[node name="MatingComponent" parent="." node_paths=PackedStringArray("hunger_component", "thrist_component", "growth_component", "action_component") instance=ExtResource("17_153qs")]
hunger_component = NodePath("../HungerComponent")
thrist_component = NodePath("../ThristComponent")
growth_component = NodePath("../GrowthComponent")
action_component = NodePath("../ActionComponet")

[node name="ActionComponet" parent="." node_paths=PackedStringArray("vision_component", "action_component", "mating_component", "growth_component") instance=ExtResource("18_3gtd0")]
script = ExtResource("19_k677e")
states = {
"drink": NodePath("../State Machine/Drinking"),
"eat": NodePath("../State Machine/Eating"),
"explore": NodePath("../State Machine/Explore"),
"goto": NodePath("../State Machine/Goto"),
"idle": NodePath("../State Machine/Idle"),
"mate": NodePath("../State Machine/Mate"),
"wander": NodePath("../State Machine/Wander")
}
vision_component = NodePath("../VisionComponent")
action_component = NodePath(".")
mating_component = NodePath("../MatingComponent")
growth_component = NodePath("../GrowthComponent")
searchable_items = 24

[node name="VisionComponent" parent="." node_paths=PackedStringArray("growth_component") instance=ExtResource("20_uegb7")]
growth_component = NodePath("../GrowthComponent")
searchable_items = 25

[node name="AnimationHandler" parent="." node_paths=PackedStringArray("state_machine", "animation_player") instance=ExtResource("21_bjq7c")]
state_machine = NodePath("../State Machine")
animation_player = NodePath("")
animtaion_dicts = {
"Idle": "Idle",
"Wander": "Wander"
}
enabled = false

[node name="InfoComponent" type="TextureButton" parent="."]
offset_left = -60.0
offset_top = -60.0
offset_right = 60.0
offset_bottom = 60.0
mouse_filter = 1
script = ExtResource("22_20dna")

[node name="State Machine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("23_io67o")
initial_state = NodePath("Wander")

[node name="Idle" type="Node" parent="State Machine"]
unique_name_in_owner = true
script = ExtResource("24_cgf7x")
metadata/_custom_type_script = "uid://d037sd1151ck3"

[node name="Wander" type="Node" parent="State Machine" node_paths=PackedStringArray("pathfinding_component", "growth_component")]
script = ExtResource("25_vqckb")
pathfinding_component = NodePath("../../PathfindingComponent")
growth_component = NodePath("../../GrowthComponent")
wander_radius = 1000.0
metadata/_custom_type_script = "uid://d037sd1151ck3"

[node name="wander_timer" type="Timer" parent="State Machine/Wander"]

[node name="fallback_timer" type="Timer" parent="State Machine/Wander"]
wait_time = 5.0

[node name="Goto" type="Node" parent="State Machine" node_paths=PackedStringArray("pathfinding_component", "growth_component")]
script = ExtResource("26_rw7lf")
pathfinding_component = NodePath("../../PathfindingComponent")
growth_component = NodePath("../../GrowthComponent")
metadata/_custom_type_script = "uid://d037sd1151ck3"

[node name="Eating" type="Node" parent="State Machine" node_paths=PackedStringArray("action_component", "hunger_component")]
script = ExtResource("27_hxgh2")
action_component = NodePath("../../ActionComponet")
hunger_component = NodePath("../../HungerComponent")
metadata/_custom_type_script = "uid://d037sd1151ck3"

[node name="Drinking" type="Node" parent="State Machine" node_paths=PackedStringArray("action_component", "thrist_component")]
script = ExtResource("28_s7vl5")
action_component = NodePath("../../ActionComponet")
thrist_component = NodePath("../../ThristComponent")
metadata/_custom_type_script = "uid://d037sd1151ck3"

[node name="Explore" type="Node" parent="State Machine" node_paths=PackedStringArray("growth_component")]
script = ExtResource("29_g8a5i")
growth_component = NodePath("../../GrowthComponent")
metadata/_custom_type_script = "uid://d037sd1151ck3"

[node name="Explore Timer" type="Timer" parent="State Machine/Explore"]
wait_time = 10.0
autostart = true

[node name="Mate" type="Node" parent="State Machine" node_paths=PackedStringArray("mating_component")]
script = ExtResource("30_cep4h")
mating_component = NodePath("../../MatingComponent")
metadata/_custom_type_script = "uid://d037sd1151ck3"

[node name="ExploreRay" type="ShapeCast2D" parent="."]
unique_name_in_owner = true
modulate = Color(0, 1, 0, 0.196078)
shape = SubResource("CircleShape2D_meode")
target_position = Vector2(0, 0)
collision_mask = 18

[node name="ArrowTest" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
texture_filter = 1
position = Vector2(0, -50)
texture = ExtResource("31_7u62a")

[connection signal="action" from="ActionComponet" to="State Machine/Wander" method="disable_timer"]
[connection signal="pressed" from="InfoComponent" to="InfoComponent" method="_on_pressed"]
[connection signal="timeout" from="State Machine/Wander/wander_timer" to="State Machine/Wander" method="new_wander_position"]
[connection signal="timeout" from="State Machine/Wander/fallback_timer" to="State Machine/Wander" method="new_wander_position" binds= [true]]
[connection signal="Exited" from="State Machine/Eating" to="ActionComponet" method="clear_curr_action"]
[connection signal="Exited" from="State Machine/Drinking" to="ActionComponet" method="clear_curr_action"]
[connection signal="timeout" from="State Machine/Explore/Explore Timer" to="State Machine/Explore" method="random_direction"]
[connection signal="Exited" from="State Machine/Mate" to="ActionComponet" method="clear_curr_action"]
